// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPage renders a selected vehicle 1`] = `
<div
  className="c-page m-search-page m-search-page--show-list"
>
  <div
    className="m-search-page__input-and-results"
  >
    <div
      className="m-search-page__input"
    >
      <form
        className="m-search-form"
        onSubmit={[Function]}
      >
        <div
          className="m-search-form__row"
        >
          <input
            autoFocus={true}
            className="m-search-form__text"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <button
            className="m-search-form__submit"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
        <div
          className="m-search-form__row"
        >
          <ul
            className="m-search-form__property-buttons"
          >
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={true}
                className="m-search-form__property-input"
                id="property-all"
                name="property"
                onChange={[Function]}
                type="radio"
                value="all"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-all"
              >
                all
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-run"
                name="property"
                onChange={[Function]}
                type="radio"
                value="run"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-run"
              >
                run
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-vehicle"
                name="property"
                onChange={[Function]}
                type="radio"
                value="vehicle"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-vehicle"
              >
                vehicle
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-operator"
                name="property"
                onChange={[Function]}
                type="radio"
                value="operator"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-operator"
              >
                operator
              </label>
            </li>
          </ul>
        </div>
      </form>
      <button
        className="m-search-page__toggle-mobile-display-button"
        onClick={[Function]}
      >
        Show 
        map
         instead
      </button>
    </div>
    <div
      className="m-search-display"
    >
      <div
        className="m-recent-searches"
      >
        <div
          className="m-recent-searches__heading"
        >
          Recent Searches
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-search-page__map"
  >
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
  <div
    className="m-properties-panel"
    id="m-properties-panel"
  >
    <div
      className="m-vehicle-properties-panel"
    >
      <div
        className="m-properties-panel__header"
      >
        <div
          className="m-properties-panel__label"
        >
          <svg
            style={
              Object {
                "height": 64,
                "width": 64,
              }
            }
            viewBox="-32 -20 64 64"
          >
            <g
              className="m-vehicle-icon m-vehicle-icon--large on-time"
            >
              <rect
                className="m-vehicle-icon__label-background"
                height={24}
                rx={12}
                ry={12}
                width={64}
                x={-32}
                y={19}
              />
              <text
                className="m-vehicle-icon__label"
                dominantBaseline="central"
                textAnchor="middle"
                x="0"
                y={31}
              >
                1
              </text>
              <path
                className="m-vehicle-icon__triangle"
                d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                transform="scale(1) rotate(0) translate(-24,-22)"
              />
              <text
                className="m-vehicle-icon__variant"
                dominantBaseline="alphabetic"
                textAnchor="middle"
                x={0}
                y={14}
              >
                X
              </text>
            </g>
          </svg>
        </div>
        <div
          className="m-properties-panel__variant"
        >
          <div
            className="m-properties-panel__inbound-outbound"
          >
            
          </div>
          <div
            className="m-route-variant-name"
          >
            <span
              className="m-route-variant-name__route-id"
            >
              39_X
            </span>
             Forest Hills
          </div>
          <div
            className="m-properties-panel__schedule-adherence on-time"
          >
            <div
              className="m-properties-panel__schedule-adherence-status-icon"
            >
              <svg
                height="10"
                width="10"
              >
                <circle
                  cx="5"
                  cy="5"
                  r="5"
                />
              </svg>
            </div>
            <div
              className="m-properties-panel__schedule-adherence-status-string"
            >
              on time
            </div>
            <div
              className="m-properties-panel__schedule-adherence-label"
            >
              (0 min early)
            </div>
          </div>
        </div>
        <button
          className="m-close-button"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr>
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run-1
              </td>
            </tr>
            <tr>
              <td
                className="m-properties-list__property-label"
              >
                Vehicle
              </td>
              <td
                className="m-properties-list__property-value"
              >
                v1-label
              </td>
            </tr>
            <tr>
              <td
                className="m-properties-list__property-label"
              >
                Operator
              </td>
              <td
                className="m-properties-list__property-value"
              >
                SMITH #op1
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="m-vehicle-properties-panel__location"
      >
        <div
          className="m-properties-list__property-label"
        >
          Next Stop
        </div>
        <div
          className="m-properties-list__property-value"
        >
          Stop Name
        </div>
        <div
          className="m-properties-list__property-label"
        >
          Last GPS Ping
        </div>
        <div
          className="m-properties-list__property-value"
        >
          111s ago
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          target="_blank"
        >
          Directions
        </a>
        <div
          className="m-vehicle-properties-panel__map"
        >
          <div
            className="m-vehicle-map"
            id="id-vehicle-map"
          />
        </div>
      </div>
    </div>
    <button
      className="m-view-search-result-button"
      onClick={[Function]}
    >
      <span
        className="m-view-search-result-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      View on Route Ladder
    </button>
  </div>
  <div
    className="m-properties-panel__modal-overlay"
    onClick={[Function]}
  />
</div>
`;

exports[`SearchPage renders the empty state 1`] = `
<div
  className="c-page m-search-page m-search-page--show-list"
>
  <div
    className="m-search-page__input-and-results"
  >
    <div
      className="m-search-page__input"
    >
      <form
        className="m-search-form"
        onSubmit={[Function]}
      >
        <div
          className="m-search-form__row"
        >
          <input
            autoFocus={true}
            className="m-search-form__text"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <button
            className="m-search-form__submit"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
        <div
          className="m-search-form__row"
        >
          <ul
            className="m-search-form__property-buttons"
          >
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={true}
                className="m-search-form__property-input"
                id="property-all"
                name="property"
                onChange={[Function]}
                type="radio"
                value="all"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-all"
              >
                all
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-run"
                name="property"
                onChange={[Function]}
                type="radio"
                value="run"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-run"
              >
                run
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-vehicle"
                name="property"
                onChange={[Function]}
                type="radio"
                value="vehicle"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-vehicle"
              >
                vehicle
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-operator"
                name="property"
                onChange={[Function]}
                type="radio"
                value="operator"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-operator"
              >
                operator
              </label>
            </li>
          </ul>
        </div>
      </form>
      <button
        className="m-search-page__toggle-mobile-display-button"
        onClick={[Function]}
      >
        Show 
        map
         instead
      </button>
    </div>
    <div
      className="m-search-display"
    >
      <div
        className="m-recent-searches"
      >
        <div
          className="m-recent-searches__heading"
        >
          Recent Searches
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-search-page__map"
  >
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;

exports[`SearchPage renders vehicle data 1`] = `
<div
  className="c-page m-search-page m-search-page--show-list"
>
  <div
    className="m-search-page__input-and-results"
  >
    <div
      className="m-search-page__input"
    >
      <form
        className="m-search-form"
        onSubmit={[Function]}
      >
        <div
          className="m-search-form__row"
        >
          <input
            autoFocus={true}
            className="m-search-form__text"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <button
            className="m-search-form__submit"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
        <div
          className="m-search-form__row"
        >
          <ul
            className="m-search-form__property-buttons"
          >
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={true}
                className="m-search-form__property-input"
                id="property-all"
                name="property"
                onChange={[Function]}
                type="radio"
                value="all"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-all"
              >
                all
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-run"
                name="property"
                onChange={[Function]}
                type="radio"
                value="run"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-run"
              >
                run
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-vehicle"
                name="property"
                onChange={[Function]}
                type="radio"
                value="vehicle"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-vehicle"
              >
                vehicle
              </label>
            </li>
            <li
              className="m-search-form__property-button"
            >
              <input
                checked={false}
                className="m-search-form__property-input"
                id="property-operator"
                name="property"
                onChange={[Function]}
                type="radio"
                value="operator"
              />
              <label
                className="m-search-form__property-label"
                htmlFor="property-operator"
              >
                operator
              </label>
            </li>
          </ul>
        </div>
      </form>
      <button
        className="m-search-page__toggle-mobile-display-button"
        onClick={[Function]}
      >
        Show 
        map
         instead
      </button>
    </div>
    <div
      className="m-search-display"
    >
      <div
        className="m-recent-searches"
      >
        <div
          className="m-recent-searches__heading"
        >
          Recent Searches
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-search-page__map"
  >
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;
